[gd_scene load_steps=69 format=3 uid="uid://dgrnrl2t0ubx1"]

[ext_resource type="Script" uid="uid://cgxqdtfe8b5hc" path="res://Scripts/Basic/Book.gd" id="1_pcbcp"]
[ext_resource type="Texture2D" uid="uid://58mo68rm5nbc" path="res://Images/OpenPages.png" id="2_4jpuk"]
[ext_resource type="Texture2D" uid="uid://by481jc6g21eb" path="res://Images/AnimBackground.png" id="3_sc8xq"]
[ext_resource type="PackedScene" uid="uid://y1ct72dyugt1" path="res://Scenes/Basic/AnimatedSprite.tscn" id="4_8cats"]
[ext_resource type="Texture2D" uid="uid://cicmfy5ejelah" path="res://Images/PagesR.png" id="5_iqijk"]
[ext_resource type="FontFile" uid="uid://cuao14s32x006" path="res://Fonts/Caroni-Regular.otf" id="6_1i4o4"]
[ext_resource type="Texture2D" uid="uid://daylkijgws37" path="res://Animations/PageTurn/PageTurn.0000.png" id="7_3v36b"]
[ext_resource type="Texture2D" uid="uid://b5wiug4pab3ji" path="res://Animations/PageTurn/PageTurn.0001.png" id="8_u11n4"]
[ext_resource type="Texture2D" uid="uid://m2fvvy5x3n73" path="res://Animations/PageTurn/PageTurn.0002.png" id="9_flxmp"]
[ext_resource type="Texture2D" uid="uid://bhxjlqmoojqgv" path="res://Animations/PageTurn/PageTurn.0003.png" id="10_au0t2"]
[ext_resource type="Texture2D" uid="uid://bg6k3ggl1rwru" path="res://Animations/PageTurn/PageTurn.0004.png" id="11_gopau"]
[ext_resource type="Texture2D" uid="uid://dq1op3h126ywc" path="res://Animations/PageTurn/PageTurn.0005.png" id="12_jh3kn"]
[ext_resource type="Texture2D" uid="uid://c3i23cgrfqcu6" path="res://Animations/PageTurn/PageTurn.0006.png" id="13_6axwj"]
[ext_resource type="Texture2D" uid="uid://dw2rsubgxnjaj" path="res://Animations/PageTurn/PageTurn.0007.png" id="14_aqfyw"]
[ext_resource type="Texture2D" uid="uid://qkr30mlndd38" path="res://Animations/PageTurn/PageTurn.0008.png" id="15_ngb4i"]
[ext_resource type="Texture2D" uid="uid://xnmfe64fpuqb" path="res://Animations/PageTurn/PageTurn.0009.png" id="16_r6tf1"]
[ext_resource type="Texture2D" uid="uid://lyieyjbpqs50" path="res://Animations/PageTurn/PageTurn.0010.png" id="17_dobfx"]
[ext_resource type="Texture2D" uid="uid://ca3xkcsk0tive" path="res://Animations/PageTurn/PageTurn.0011.png" id="18_5vv3a"]
[ext_resource type="Texture2D" uid="uid://dilh44d3p3a1b" path="res://Animations/PageTurn/PageTurn.0012.png" id="19_n0utx"]
[ext_resource type="Texture2D" uid="uid://dkhmru35xpvml" path="res://Animations/PageTurn/PageTurn.0013.png" id="20_whp0i"]
[ext_resource type="Texture2D" uid="uid://bqjbh5jhaib0v" path="res://Animations/PageTurn/PageTurn.0014.png" id="21_w260e"]
[ext_resource type="Texture2D" uid="uid://dh1b8y3r372p1" path="res://Animations/PageTurn/PageTurn.0015.png" id="22_c31x7"]
[ext_resource type="Texture2D" uid="uid://b5godqigbiv82" path="res://Animations/PageTurn/PageTurn.0016.png" id="23_scfbd"]
[ext_resource type="Texture2D" uid="uid://b5p7na43iau22" path="res://Animations/PageTurn/PageTurn.0017.png" id="24_dw58i"]
[ext_resource type="Texture2D" uid="uid://cixnxncl7ocl3" path="res://Animations/PageTurn/PageTurn.0018.png" id="25_q0kcx"]
[ext_resource type="Texture2D" uid="uid://b7b6f62mx7ven" path="res://Animations/PageTurn/PageTurn.0019.png" id="26_dk64q"]
[ext_resource type="Texture2D" uid="uid://bejww87pf14li" path="res://Animations/PageTurn/PageTurn.0020.png" id="27_ru3tu"]
[ext_resource type="Texture2D" uid="uid://cpy7emywirqpq" path="res://Animations/PageTurn/PageTurn.0021.png" id="28_qs0r5"]
[ext_resource type="Texture2D" uid="uid://c822jxeonprf7" path="res://Animations/PageTurn/PageTurn.0022.png" id="29_jg8gs"]
[ext_resource type="Texture2D" uid="uid://bbt5b3hlp28j3" path="res://Animations/PageTurn/PageTurn.0023.png" id="30_kw0yj"]
[ext_resource type="Texture2D" uid="uid://bxb5p0xdufiqn" path="res://Animations/PageTurn/PageTurn.0024.png" id="31_7spif"]
[ext_resource type="Texture2D" uid="uid://bubrsn0mjxavx" path="res://Animations/PageTurn/PageTurn.0025.png" id="32_nh3b8"]
[ext_resource type="Texture2D" uid="uid://d1w1vx0u2y2uf" path="res://Animations/PageTurn/PageTurn.0026.png" id="33_ko7xy"]
[ext_resource type="Texture2D" uid="uid://bbc3j1r05fm0l" path="res://Animations/PageTurn/PageTurn.0027.png" id="34_to78t"]
[ext_resource type="Texture2D" uid="uid://chsqvkf414rn0" path="res://Animations/PageTurn/PageTurn.0028.png" id="35_rrhtn"]
[ext_resource type="Texture2D" uid="uid://df56hjrslfd7w" path="res://Animations/PageTurn/PageTurn.0029.png" id="36_ri3ro"]
[ext_resource type="Texture2D" uid="uid://b3pdxenv3e1tr" path="res://Animations/PageTurn/PageTurn.0030.png" id="37_kesvj"]
[ext_resource type="Texture2D" uid="uid://cbhkgbv6emhl4" path="res://Animations/PageTurn/PageTurn.0031.png" id="38_172y0"]
[ext_resource type="Texture2D" uid="uid://bxm3lcj7bfqb4" path="res://Animations/PageTurn/PageTurn.0032.png" id="39_avl1u"]
[ext_resource type="Texture2D" uid="uid://dnntgra6hym2t" path="res://Animations/PageTurn/PageTurn.0033.png" id="40_yaxrn"]
[ext_resource type="Texture2D" uid="uid://ct4parhbmedf4" path="res://Animations/PageTurn/PageTurn.0034.png" id="41_nwjth"]
[ext_resource type="Texture2D" uid="uid://ludguosu6g1r" path="res://Animations/PageTurn/PageTurn.0035.png" id="42_qmw0i"]
[ext_resource type="Texture2D" uid="uid://bykenr5k04vl5" path="res://Animations/PageTurn/PageTurn.0036.png" id="43_u8k8y"]
[ext_resource type="Texture2D" uid="uid://dqnu63x4syffg" path="res://Animations/PageTurn/PageTurn.0037.png" id="44_xx3n7"]
[ext_resource type="Texture2D" uid="uid://c0olfcxc51pb1" path="res://Animations/PageTurn/PageTurn.0038.png" id="45_x2kcm"]
[ext_resource type="Texture2D" uid="uid://dwmk4emnwfnay" path="res://Animations/PageTurn/PageTurn.0039.png" id="46_lrpxf"]
[ext_resource type="Texture2D" uid="uid://do2myeyabgk3g" path="res://Animations/PageTurn/PageTurn.0040.png" id="47_4xav6"]
[ext_resource type="Texture2D" uid="uid://dcmt7kv6nov2t" path="res://Animations/PageTurn/PageTurn.0041.png" id="48_xda22"]
[ext_resource type="Texture2D" uid="uid://b5pvhervfug85" path="res://Animations/PageTurn/PageTurn.0042.png" id="49_0awl0"]
[ext_resource type="Texture2D" uid="uid://ds6t1dpqkn0u8" path="res://Animations/PageTurn/PageTurn.0043.png" id="50_ih6cp"]
[ext_resource type="Texture2D" uid="uid://bad0j8w62o3ta" path="res://Animations/PageTurn/PageTurn.0044.png" id="51_0ri6m"]
[ext_resource type="Texture2D" uid="uid://1vc61akq8vrd" path="res://Animations/PageTurn/PageTurn.0045.png" id="52_78spv"]
[ext_resource type="Texture2D" uid="uid://5e5fbsrshcg" path="res://Animations/PageTurn/PageTurn.0046.png" id="53_aiop6"]
[ext_resource type="Texture2D" uid="uid://dmmk6utea1qgj" path="res://Animations/PageTurn/PageTurn.0047.png" id="54_jfi30"]
[ext_resource type="Texture2D" uid="uid://c2d5caxno0f72" path="res://Animations/PageTurn/PageTurn.0048.png" id="55_ftpqm"]
[ext_resource type="Texture2D" uid="uid://b5ivd3q7dbn4o" path="res://Images/Info.png" id="56_1idlk"]
[ext_resource type="AudioStream" uid="uid://blga8lj04csty" path="res://Audio/Voice/Snail1.wav" id="56_vgmqd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vu66r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_3v36b")
}, {
"duration": 1.0,
"texture": ExtResource("8_u11n4")
}, {
"duration": 1.0,
"texture": ExtResource("9_flxmp")
}, {
"duration": 1.0,
"texture": ExtResource("10_au0t2")
}, {
"duration": 1.0,
"texture": ExtResource("11_gopau")
}, {
"duration": 1.0,
"texture": ExtResource("12_jh3kn")
}, {
"duration": 1.0,
"texture": ExtResource("13_6axwj")
}, {
"duration": 1.0,
"texture": ExtResource("14_aqfyw")
}, {
"duration": 1.0,
"texture": ExtResource("15_ngb4i")
}, {
"duration": 1.0,
"texture": ExtResource("16_r6tf1")
}, {
"duration": 1.0,
"texture": ExtResource("17_dobfx")
}, {
"duration": 1.0,
"texture": ExtResource("18_5vv3a")
}, {
"duration": 1.0,
"texture": ExtResource("19_n0utx")
}, {
"duration": 1.0,
"texture": ExtResource("20_whp0i")
}, {
"duration": 1.0,
"texture": ExtResource("21_w260e")
}, {
"duration": 1.0,
"texture": ExtResource("22_c31x7")
}, {
"duration": 1.0,
"texture": ExtResource("23_scfbd")
}, {
"duration": 1.0,
"texture": ExtResource("24_dw58i")
}, {
"duration": 1.0,
"texture": ExtResource("25_q0kcx")
}, {
"duration": 1.0,
"texture": ExtResource("26_dk64q")
}, {
"duration": 1.0,
"texture": ExtResource("27_ru3tu")
}, {
"duration": 1.0,
"texture": ExtResource("28_qs0r5")
}, {
"duration": 1.0,
"texture": ExtResource("29_jg8gs")
}, {
"duration": 1.0,
"texture": ExtResource("30_kw0yj")
}, {
"duration": 1.0,
"texture": ExtResource("31_7spif")
}, {
"duration": 1.0,
"texture": ExtResource("32_nh3b8")
}, {
"duration": 1.0,
"texture": ExtResource("33_ko7xy")
}, {
"duration": 1.0,
"texture": ExtResource("34_to78t")
}, {
"duration": 1.0,
"texture": ExtResource("35_rrhtn")
}, {
"duration": 1.0,
"texture": ExtResource("36_ri3ro")
}, {
"duration": 1.0,
"texture": ExtResource("37_kesvj")
}, {
"duration": 1.0,
"texture": ExtResource("38_172y0")
}, {
"duration": 1.0,
"texture": ExtResource("39_avl1u")
}, {
"duration": 1.0,
"texture": ExtResource("40_yaxrn")
}, {
"duration": 1.0,
"texture": ExtResource("41_nwjth")
}, {
"duration": 1.0,
"texture": ExtResource("42_qmw0i")
}, {
"duration": 1.0,
"texture": ExtResource("43_u8k8y")
}, {
"duration": 1.0,
"texture": ExtResource("44_xx3n7")
}, {
"duration": 1.0,
"texture": ExtResource("45_x2kcm")
}, {
"duration": 1.0,
"texture": ExtResource("46_lrpxf")
}, {
"duration": 1.0,
"texture": ExtResource("47_4xav6")
}, {
"duration": 1.0,
"texture": ExtResource("48_xda22")
}, {
"duration": 1.0,
"texture": ExtResource("49_0awl0")
}, {
"duration": 1.0,
"texture": ExtResource("50_ih6cp")
}, {
"duration": 1.0,
"texture": ExtResource("51_0ri6m")
}, {
"duration": 1.0,
"texture": ExtResource("52_78spv")
}, {
"duration": 1.0,
"texture": ExtResource("53_aiop6")
}, {
"duration": 1.0,
"texture": ExtResource("54_jfi30")
}, {
"duration": 1.0,
"texture": ExtResource("55_ftpqm")
}],
"loop": false,
"name": &"Turn",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_llph1"]
bg_color = Color(0.490196, 0, 0.490196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 10
border_color = Color(0.34902, 0, 0.34902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ucqq"]
bg_color = Color(0.411765, 0, 0.411765, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 10
border_color = Color(0.317647, 0, 0.317647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2lph2"]
bg_color = Color(0.435294, 0, 0.435294, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 10
border_color = Color(0.34902, 0, 0.34902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5amjj"]
bg_color = Color(0.00392157, 0.380392, 0.180392, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color(0.00392157, 0.380392, 0.180392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8x253"]
bg_color = Color(0.00392157, 0.235294, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color(0.00392157, 0.188235, 0.121569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32rjy"]
bg_color = Color(0.00784314, 0.282353, 0.188235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color(0.00392157, 0.196078, 0.12549, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oh6xn"]
bg_color = Color(0.811765, 0.768627, 0.705882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0509804, 0.282353, 0.505882, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Animation" id="Animation_1nlbm"]
resource_name = "PopUp"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_elgx0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_utbih"]
_data = {
&"PopUp": SubResource("Animation_1nlbm"),
&"RESET": SubResource("Animation_elgx0")
}

[node name="Book" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 480.0
script = ExtResource("1_pcbcp")

[node name="Pages" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 480.0
color = Color(0.392157, 0.231373, 0.027451, 1)
metadata/_edit_lock_ = true

[node name="Book" type="TextureRect" parent="Pages"]
layout_mode = 0
offset_right = 686.0
offset_bottom = 457.0
scale = Vector2(1.05, 1.05)
texture = ExtResource("2_4jpuk")
expand_mode = 2
metadata/_edit_lock_ = true

[node name="BackLight" type="TextureRect" parent="Pages"]
layout_mode = 0
offset_left = -25.0
offset_top = 126.0
offset_right = 407.0
offset_bottom = 423.0
texture = ExtResource("3_sc8xq")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Book2" type="TextureRect" parent="Pages"]
modulate = Color(0.85098, 0.819608, 0.780392, 1)
layout_mode = 0
offset_left = 359.0
offset_right = 720.0
offset_bottom = 480.0
texture = ExtResource("5_iqijk")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Pages"]
layout_mode = 0
offset_left = 26.066
offset_top = 70.67
offset_right = 345.066
offset_bottom = 86.67
color = Color(0.0509804, 0.282353, 0.505882, 1)
metadata/_edit_lock_ = true

[node name="AnimationShadow" parent="Pages" instance=ExtResource("4_8cats")]
visible = false
modulate = Color(0, 0, 0, 0.376471)
position = Vector2(179.109, 285)
scale = Vector2(0.85, 0.85)

[node name="Animation" parent="Pages" instance=ExtResource("4_8cats")]
visible = false
position = Vector2(183, 277)
scale = Vector2(0.8, 0.8)

[node name="PageTurn" type="AnimatedSprite2D" parent="Pages"]
position = Vector2(344.768, 238.815)
sprite_frames = SubResource("SpriteFrames_vu66r")
animation = &"Turn"
frame = 48
speed_scale = 10.0
metadata/_edit_lock_ = true

[node name="Title" type="RichTextLabel" parent="Pages"]
layout_mode = 0
offset_top = 32.0
offset_right = 356.0
offset_bottom = 128.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.0509804, 0.282353, 0.505882, 1)
theme_override_colors/font_shadow_color = Color(0.0509804, 0.282353, 0.505882, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/normal_font = ExtResource("6_1i4o4")
theme_override_font_sizes/normal_font_size = 42
bbcode_enabled = true
text = "Safety Snail's e-mails

"
metadata/_edit_lock_ = true

[node name="Text2" type="Label" parent="Pages"]
visible = false
layout_mode = 0
offset_left = 375.0
offset_top = 59.0
offset_right = 703.0
offset_bottom = 443.0

[node name="poemText" type="RichTextLabel" parent="Pages"]
layout_mode = 0
offset_left = 365.0
offset_top = 20.0
offset_right = 717.0
offset_bottom = 472.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_1i4o4")
theme_override_font_sizes/normal_font_size = 19
text = "Ron the Rhino has many friends in his class.
He plays with them at break time and they share lunch on the grass.
As they laughed and talked about websites that are cool,
Henry the Hippo walked down from the school.

Henry was crying while looking at his phone,
So Ron went to Henry so that he won't be alone.
Why are you crying? Ron asked his friend.
So Henry showed him a message that somebody sent.

\"You are a fat Hippo and ugly too...
Go away from here. No one likes you!\"
Who sent this to you? Ron asked. This is very cruel.
Is it from somebody here at the school?"
scroll_active = false
metadata/_edit_lock_ = true

[node name="Back" type="Button" parent="Pages"]
modulate = Color(0.917647, 0, 1, 1)
layout_mode = 0
offset_left = 4.0
offset_top = 437.0
offset_right = 90.0
offset_bottom = 477.0
theme_override_fonts/font = ExtResource("6_1i4o4")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_llph1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ucqq")
theme_override_styles/normal = SubResource("StyleBoxFlat_2lph2")
text = "Menu"
metadata/_edit_lock_ = true

[node name="Continue" type="Button" parent="Pages"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 629.0
offset_top = 437.0
offset_right = 715.0
offset_bottom = 476.0
theme_override_fonts/font = ExtResource("6_1i4o4")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_5amjj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8x253")
theme_override_styles/normal = SubResource("StyleBoxFlat_32rjy")
text = "Continue"
metadata/_edit_lock_ = true

[node name="WaitTimer" type="Timer" parent="Pages"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="WordTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="InfoButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 303.0
offset_top = -20.0
offset_right = 382.0
offset_bottom = 56.0
pivot_offset = Vector2(16, 15)
toggle_mode = true
texture_normal = ExtResource("56_1idlk")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 100)
theme_override_styles/panel = SubResource("StyleBoxFlat_oh6xn")

[node name="InstructionText" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -54.0
offset_right = 198.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("6_1i4o4")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Click continue to display the paragraph
[/center]"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
libraries = {
&"": SubResource("AnimationLibrary_utbih")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("56_vgmqd")
volume_db = 12.0
pitch_scale = 1.1

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="animation_finished" from="Pages/PageTurn" to="." method="_on_page_turn_animation_finished"]
[connection signal="frame_changed" from="Pages/PageTurn" to="." method="_on_page_turn_frame_changed"]
[connection signal="pressed" from="Pages/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Pages/Continue" to="." method="_on_continue_pressed"]
[connection signal="timeout" from="Pages/WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="WordTimer" to="." method="_on_word_timer_timeout"]
[connection signal="mouse_entered" from="InfoButton" to="." method="_on_info_button_mouse_entered"]
[connection signal="mouse_exited" from="InfoButton" to="." method="_on_info_button_mouse_exited"]
